# modelo_sabesp

./: LICENSE  README.md  exploratory_data_analysis.ipynb  pyproject.toml  sistema.csv
data/: inmet.csv  sabesp_cf.csv
previsao-sistema-cantareira-main/: 2023-04-01_a_2023-05-25.xlsx  Chuvas_Multi_input_LSTM.ipynb  LICENSE  PI_IV.ipynb  Pipfile  README.md  SABESP-sistemas_produtores.xlsx  Volume_Multi_input_LSTM.ipynb  plotting_utils.py  streamlit-app.py
previsao-sistema-cantareira-main/modelo-prophet/: README.md  gerar-modelo.py  modelo-chuva.json  modelo-volume.json  previsao-chuva.pkl  previsao-volume.pkl
previsao-sistema-cantareira-main/pages/: dados.py  info-modelo.py
previsao-sistema-cantareira-main/scraper/: README.md  scraper.py
sabesp-api-main/: Pipfile  README.md  app.py  requirements.txt
sabesp-api-main/dados/: alto_tiete.csv  cantareira.csv  cotia.csv  cotia_reservatorios.csv  guarapiranga.csv  guarapiranga_reservatorios.csv  rio_claro.csv  rio_claro_reservatorios.csv  rio_grande.csv  rio_grande_reservatorios.csv  sao_lourenco.csv  sao_lourenco_reservatorios.csv
sabesp-api-main/dados_2023-10-10/: alto_tiete.csv  cantareira.csv  cotia.csv  cotia_reservatorios.csv  guarapiranga.csv  guarapiranga_reservatorios.csv  rio_claro.csv  rio_claro_reservatorios.csv  rio_grande.csv  rio_grande_reservatorios.csv  sao_lourenco.csv  sao_lourenco_reservatorios.csv
sabesp-api-main/scripts/: batch.py  runner.py  scraper.py
